matrix/synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-synapse
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix-synapse
  template:
    metadata:
      labels:
        app: matrix-synapse
    spec:
      hostAliases:
        - ip: "10.43.226.108"
          hostnames:
            - "matrix-auth.kbrt.xyz"
        - ip: "10.43.215.161"
          hostnames:
            - "localhost"
      securityContext:
        fsGroup: 991

      containers:
        - name: synapse
          image: matrixdotorg/synapse:latest@sha256:40c3dbd01c4d3525fb02657e53aa0b61a5e1d54ec8e8c293c30185ce1a9dbae1
          args: ["run"]
          ports:
            - containerPort: 8008
              name: http
          volumeMounts:
            - name: generated-config
              mountPath: /data
            - name: media-store
              mountPath: /data/media_store
            - name: python-modules
              mountPath: /modules
          livenessProbe:
            httpGet: { path: /health, port: 8008 }
            initialDelaySeconds: 120 # Give time for migrations
            periodSeconds: 30
        
        - name: sliding-sync
          image: ghcr.io/matrix-org/sliding-sync:latest@sha256:b940cab564355b15a604d5522d9db3615f889d8e9870989d8f17e189aecb4c18
          ports:
            - containerPort: 8009
              name: sync

      volumes:
        - name: config-template
          configMap: { name: synapse-config }
        - name: generated-config
          emptyDir: {}
        - name: media-store
          emptyDir: {}
        - name: python-modules
          emptyDir: {}
        - name: matrix-secrets
          secret: { secretName: matrix-secrets }
        - name: db-secret
          secret: { secretName: matrix-db-app }
        - name: s3-secret
          secret: { secretName: backblaze-app-key-secret }
---
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: matrix
spec:
  ports:
    - port: 80
      targetPort: 8008
      name: http
    - port: 8009
      targetPort: 8009
      name: sync
  selector:
    app: matrix-synapse
