matrix/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-web
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: element-web
  template:
    metadata:
      labels:
        app: element-web
    spec:
      containers:
        - name: element-web
          image: vectorim/element-web:latest@sha256:c21772a1eabeededa19be591343f548995e458ec34ba8f27425ae923c10af82e
          ports:
            - containerPort: 80
          volumeMounts:
            - { name: config, mountPath: /app/config.json, subPath: config.json }
      volumes:
        - { name: config, configMap: { name: element-web-config } }
---
apiVersion: v1
kind: Service
metadata:
  name: element-web
  namespace: matrix
spec:
  ports:
    - { port: 80, targetPort: 80 }
  selector:
    app: element-web
